--- a/index.html
+++ b/index.html
@@ -1,12 +1,19 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    
-</body>
+<html>
+    <head>
+        <title>odin-recipes-project</title>
+        <meta charset="UTF-8">
+    </head>
+
+    <body>
+        <h1>Asian Recipes</h1>
+        <img src="img/indexpic.jpg" style="width: 500px; height: 360px;" alt="Picture of Dim Sum cart that has many Dim Sum on it">
+        <ul>
+            <li type=square> <a href="recipes/sushi.html"><strong>Sushi</strong></a></li>
+            <li type=square> <a href="recipes/cucumber.html"><strong>Chinese Cucumber Salad</strong></a></li>
+            <li type=square> <a href="recipes/ramennoodles.html"><strong>Instant Noodles</strong></a> </li>
+        </ul>
+        
+
+    </body>
 </html>
